[package]
name = "axum-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
axum-extra = { version = "0.7.7", features = ["cookie-private"] }
axum-login = { version = "0.6.0", features = ["postgres", "sqlx"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
maud = { version = "0.25.0", features = ["axum"] }
serde = { version = "1.0.185", features = ["derive"] }
sha2 = "0.10.7"
sqlx = { version = "0.7.1", features = ["macros", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.28.2", features = ["full"] }
totp-rs = { version = "5.2.0", features = ["qr", "gen_secret"] }
tower-http = { version = "0.4.3", features = ["fs"] }
